--- a/app.json
+++ b/app.json
@@ -4,18 +4,18 @@
     "slug": "NovlNest",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo.png",
+    "icon": "./assets/images/app-icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "scheme": "novlnest",
     "deepLinks": true,
     "deepLinkingStrategy": "managed",
     "splash": {
-      "image": "./assets/images/logo.png",
+      "image": "./assets/images/app-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#F8F7FF",
       "dark": {
-        "image": "./assets/images/logo.png",
+        "image": "./assets/images/app-icon.png",
         "resizeMode": "contain",
         "backgroundColor": "#0D0D1A"
       }
@@ -25,11 +25,11 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.tolu.novlnest",
       "splash": {
-        "image": "./assets/images/logo.png",
+        "image": "./assets/images/app-icon.png",
         "resizeMode": "contain",
         "backgroundColor": "#F8F7FF",
         "dark": {
-          "image": "./assets/images/logo.png",
+          "image": "./assets/images/app-icon.png",
           "resizeMode": "contain",
           "backgroundColor": "#0D0D1A"
         }
@@ -54,11 +54,11 @@
     "android": {
       "package": "com.novlnest",
       "splash": {
-        "image": "./assets/images/logo.png",
+        "image": "./assets/images/app-icon.png",
         "resizeMode": "contain",
         "backgroundColor": "#F8F7FF",
         "dark": {
-          "image": "./assets/images/logo.png",
+          "image": "./assets/images/app-icon.png",
           "resizeMode": "contain",
           "backgroundColor": "#0D0D1A"
         }
@@ -107,18 +107,28 @@
         }
       ],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/logo.png",
+        "foregroundImage": "./assets/images/app-icon.png",
         "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/images/logo.png"
+      "favicon": "./assets/images/app-icon.png"
     },
     "plugins": [
       "expo-web-browser",
-      "@react-native-google-signin/google-signin"
+      "@react-native-google-signin/google-signin",
+      "expo-apple-authentication",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static",
+            "deploymentTarget": "15.1"
+          }
+        }
+      ]
     ],
     "extra": {
       "eas": {
