--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "^14.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.9",
